--- a/experience/deliverease-project.html
+++ b/experience/deliverease-project.html
@@ -9,9 +9,9 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Pup storm Charbel Tannous</title>
+    <title>DeliverEase | Charbel Tannous</title>
     <meta
-      content="Pup Storm is a full-stack pet adoption platform engineered using PHP for server-side logic and MySQL for data persistence."
+      content="DeliverEase is a modern delivery management platform built with React/TypeScript, Tailwind CSS, Shadcn, and Django REST API."
       name="description"
     />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -64,42 +64,41 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Pup Storm - Charbel Tannous Portfolio",
-        "description": "A full-stack pet adoption platform with secure authentication and external API integration",
+        "name": "DeliverEase - Charbel Tannous Portfolio",
+        "description": "A modern delivery management platform with real-time tracking and AI-powered support",
         "mainEntity": {
           "@type": "SoftwareSourceCode",
-          "name": "Pup Storm",
+          "name": "DeliverEase",
           "author": {
             "@type": "Person",
             "name": "Charbel Tannous",
             "url": "https://charbeltannous.com"
           },
-          "programmingLanguage": ["PHP", "MySQL", "JavaScript", "HTML", "CSS"],
-          "url": "https://pupstorm-9ba9083136ba.herokuapp.com",
-          "datePublished": "2023-07",
+          "programmingLanguage": ["TypeScript", "React", "Python", "Django"],
+          "datePublished": "2024-12",
           "applicationCategory": "Web Application",
           "features": [
-            "User authentication system",
-            "Password hashing",
+            "Real-time delivery tracking",
+            "AI-powered chat system",
+            "Customer support features",
             "Responsive design",
-            "Cross-browser compatibility",
-            "Mobile responsiveness",
-            "DogAPI integration"
+            "Custom React hooks",
+            "Efficient state management"
           ],
           "technicalRequirements": [
-            "PHP",
-            "MySQL",
-            "JavaScript",
-            "HTML/CSS",
-            "Microsoft Azure",
-            "Heroku",
-            "cURL"
+            "React",
+            "TypeScript",
+            "Tailwind CSS",
+            "Shadcn/ui",
+            "Django",
+            "REST API",
+            "Heroku"
           ],
           "operatingSystem": "All",
-          "applicationSubCategory": "Pet Adoption Platform"
+          "applicationSubCategory": "Delivery Management Platform"
         }
       }
-      </script>
+    </script>
   </head>
   <body>
     <div class="page-wrapper">
@@ -227,7 +226,7 @@
                     <div class="project-hero-component">
                       <div class="project-hero-intro">
                         <div class="hero-intro-title">
-                          <h1 class="heading-xlarge">Pup Storm</h1>
+                          <h1 class="heading-xlarge">DeliverEase</h1>
                         </div>
                       </div>
                       <div>
@@ -240,7 +239,7 @@
                               class="link-strip-item"
                               id="w-node-_95e106c9-ec73-8b75-a002-5b702b841133-3071e09b"
                             >
-                              <div class="text-size-regular">Pup Storm</div>
+                              <div class="text-size-regular">DeliverEase</div>
                             </div>
                           </div>
                           <div class="link-strip-content">
@@ -251,7 +250,7 @@
                               class="link-strip-item"
                               id="w-node-f780c5c6-d697-b1f7-5bf7-19428989d7a8-3071e09b"
                             >
-                              <div class="text-size-regular">2023</div>
+                              <div class="text-size-regular">2024</div>
                             </div>
                           </div>
                         </div>
@@ -339,9 +338,9 @@
                         </div>
                         <div>
                           <div class="text-size-xlarge">
-                            Pup Storm is a full-stack pet adoption platform
-                            engineered using PHP for server-side logic and MySQL
-                            for data persistence.
+                            DeliverEase is a modern delivery management platform
+                            built with React/TypeScript, Tailwind CSS, Shadcn, and
+                            Django REST API.
                           </div>
                         </div>
                       </div>
@@ -447,15 +446,15 @@
                               I started by designing a responsive front-end that
                               would work seamlessly on both desktop and mobile
                               devices. To bring the platform to life, I
-                              implemented the back-end using PHP and MySQL,
+                              implemented the back-end using Django REST API,
                               ensuring robust data management and user
                               authentication. One of the key features I
                               developed was the integration with an external API
-                              to dynamically generate pet images, which
+                              to dynamically generate delivery routes, which
                               significantly boosted user engagement. After
-                              thorough testing and refinement, I deployed Pup
-                              Storm on both Azure and Heroku platforms, ensuring
-                              high availability and performance.
+                              thorough testing and refinement, I deployed
+                              DeliverEase on Heroku, ensuring high availability
+                              and performance.
                             </p>
                           </div>
                         </div>
@@ -644,74 +643,6 @@
                                     ../images/screely-1727230366954-1-20-1-p-1600.webp 1600w,
                                     ../images/screely-1727230366954-1-20-1-p-2000.webp 2000w,
                                     ../images/screely-1727230366954-1-20-1-.webp       2544w
-                                  "
-                                />
-                                <div class="overlay"></div></div
-                            ></a>
-                            <div class="tag-wrapper tag-wrapper-small">
-                              <a
-                                class="tag w-inline-block"
-                                href="/category/projects.html"
-                                ><div>Personal Projects</div></a
-                              >
-                            </div>
-                          </div>
-                          <div class="project-item w-dyn-item" role="listitem">
-                            <a
-                              class="work-card large-work-card w-inline-block"
-                              href="/experience/deliverease-project.html"
-                              ><div class="work-card-info">
-                                <div class="text-size-large">Deliverease</div>
-                                <div class="project-arrow">
-                                  <div class="arrow-icon-clip">
-                                    <div
-                                      class="arrow-icon large-arrow-icon w-embed"
-                                    >
-                                      <svg
-                                        fill="none"
-                                        height="420"
-                                        viewbox="0 0 24 24"
-                                        width="420"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                      >
-                                        <path
-                                          d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
-                                          fill="currentColor"
-                                        ></path>
-                                      </svg>
-                                    </div>
-                                    <div
-                                      class="arrow-icon large-arrow-icon w-embed"
-                                    >
-                                      <svg
-                                        fill="none"
-                                        height="420"
-                                        viewbox="0 0 24 24"
-                                        width="420"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                      >
-                                        <path
-                                          d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
-                                          fill="currentColor"
-                                        ></path>
-                                      </svg>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="work-card-image">
-                                <img
-                                  alt=""
-                                  class="image-full"
-                                  loading="lazy"
-                                  sizes="(max-width: 479px) 86vw, (max-width: 991px) 81vw, (max-width: 1919px) 244.88333129882812px, 20vw"
-                                  src="../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg"
-                                  srcset="
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-500.jpg   500w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-800.jpg   800w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-1080.jpg 1080w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-1600.jpg 1600w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg        2544w
                                   "
                                 />
                                 <div class="overlay"></div></div
