--- a/index.html
+++ b/index.html
@@ -1781,7 +1781,77 @@
                                     </div>
                                   </div></a
                                 >
+                                
                               </div>
+                              <div
+                              class="project-item w-dyn-item"
+                              role="listitem"
+                            >
+                              <div class="tag-wrapper">
+                                <a
+                                  class="tag w-inline-block"
+                                  href="/category/projects.html"
+                                  ><div>Personal Projects</div></a
+                                >
+                              </div>
+                              <a
+                                class="project-card w-inline-block"
+                                href="/experience/deliverease-project.html"
+                                ><div class="project-background">
+                                  <img
+                                    alt=""
+                                    class="image-full"
+                                    loading="lazy"
+                                    src="images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg"
+                                  />
+                                  <div class="overlay"></div>
+                                </div>
+                                <div class="work-card-info">
+                                  <div class="project-arrow">
+                                    <div class="arrow-icon-clip">
+                                      <div
+                                        class="arrow-icon large-arrow-icon w-embed"
+                                      >
+                                        <svg
+                                          fill="none"
+                                          height="420"
+                                          viewbox="0 0 24 24"
+                                          width="420"
+                                          xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                          <path
+                                            d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
+                                            fill="currentColor"
+                                          ></path>
+                                        </svg>
+                                      </div>
+                                      <div
+                                        class="arrow-icon large-arrow-icon w-embed"
+                                      >
+                                        <svg
+                                          fill="none"
+                                          height="420"
+                                          viewbox="0 0 24 24"
+                                          width="420"
+                                          xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                          <path
+                                            d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
+                                            fill="currentColor"
+                                          ></path>
+                                        </svg>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div
+                                    class="text-size-large text-weight-medium"
+                                  >
+                                    Deliverease
+                                  </div>
+                                </div></a
+                              >
+                              
+                            </div>
                             </div>
                           </div>
                         </div>
