Refactor CSS grid layout and update project references in HTML files

--- a/experience/deliverease-project.html
+++ b/experience/deliverease-project.html
@@ -41,6 +41,7 @@
       }
     </style>
     <style>
+      
       html {
         font-size: calc(0.625rem + 0.41666666666666663vw);
       }
@@ -276,21 +277,12 @@
                         >
                           <div class="project-hero-image">
                             <img
-                              alt=""
+                              alt="DeliverEase Landing Page"
                               class="image-full"
                               loading="lazy"
-                              sizes="(max-width: 479px) 91vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1919px) 40vw, 755.4833374023438px"
-                              src="../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min.jpg"
-                              srcset="
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min-p-500.jpg   500w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min-p-800.jpg   800w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min-p-1080.jpg 1080w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min-p-1600.jpg 1600w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min.jpg        2544w
-                              "
-                              style="
-                                background-image: url('../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_25_16-min.jpg');
-                              "
+                              
+
+                              src="../images/2.Deliverease.webp"
                               width="Auto"
                             />
                           </div>
@@ -301,21 +293,10 @@
                         >
                           <div class="project-hero-image">
                             <img
-                              alt=""
+                              alt="DeliverEase Help Center"
                               class="image-full"
                               loading="lazy"
-                              sizes="(max-width: 479px) 91vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1919px) 40vw, 755.4833374023438px"
-                              src="../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min.jpg"
-                              srcset="
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min-p-500.jpg   500w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min-p-800.jpg   800w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min-p-1080.jpg 1080w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min-p-1600.jpg 1600w,
-                                ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min.jpg        2544w
-                              "
-                              style="
-                                background-image: url('../images/screencapture-pupstorm-9ba9083136ba-herokuapp-care-html-2024-10-16-23_26_16-min.jpg');
-                              "
+                              src="../images/4.Deliverease.webp"
                               width="Auto"
                             />
                           </div>
@@ -348,7 +329,7 @@
                   </div>
                 </div>
               </section>
-              <section class="section-banner-post">
+               <!-- <section class="section-banner-post">
                 <div class="page-padding">
                   <div class="container-large">
                     <div class="padding-vertical padding-xhuge">
@@ -367,7 +348,7 @@
                     <div class="overlay"></div>
                   </div>
                 </div>
-              </section>
+              </section> -->
               <section class="section-showcase-post">
                 <div class="page-padding">
                   <div class="container-large">
@@ -390,18 +371,10 @@
                             >
                               <div class="quote-image">
                                 <img
-                                  alt=""
+                                  alt="DeliverEase Quotation"
                                   class="showcase-image"
                                   loading="lazy"
-                                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 90vw, (max-width: 1919px) 41vw, 774.566650390625px"
-                                  src="../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min.jpg"
-                                  srcset="
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min-p-500.jpg   500w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min-p-800.jpg   800w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min-p-1080.jpg 1080w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min-p-1600.jpg 1600w,
-                                    ../images/screencapture-pupstorm-9ba9083136ba-herokuapp-browse-pets-php-2024-10-16-23_34_36-min.jpg        2524w
-                                  "
+                                  src="../images/1.Deliverease.webp"
                                 />
                               </div>
                             </div>
@@ -411,19 +384,10 @@
                             >
                               <div class="quote-image">
                                 <img
-                                  alt=""
+                                  alt="DeliverEase Request Delivery"
                                   class="showcase-image"
                                   loading="lazy"
-                                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 90vw, (max-width: 1919px) 41vw, 774.566650390625px"
-                                  src="../images/screenshot_16-oct_23-28-09_17218.jpg"
-                                  srcset="
-                                    ../images/screenshot_16-oct_23-28-09_17218-p-500.jpg   500w,
-                                    ../images/screenshot_16-oct_23-28-09_17218-p-800.jpg   800w,
-                                    ../images/screenshot_16-oct_23-28-09_17218-p-1080.jpg 1080w,
-                                    ../images/screenshot_16-oct_23-28-09_17218-p-1600.jpg 1600w,
-                                    ../images/screenshot_16-oct_23-28-09_17218-p-2000.jpg 2000w,
-                                    ../images/screenshot_16-oct_23-28-09_17218.jpg        2515w
-                                  "
+                                  src="../images/3.Deliverease.webp"
                                 />
                               </div>
                             </div>
