--- a/experience/pupstorm-project.html
+++ b/experience/pupstorm-project.html
@@ -349,7 +349,7 @@
                   </div>
                 </div>
               </section>
-              <section class="section-banner-post">
+               <!-- <section class="section-banner-post">
                 <div class="page-padding">
                   <div class="container-large">
                     <div class="padding-vertical padding-xhuge">
@@ -368,7 +368,7 @@
                     <div class="overlay"></div>
                   </div>
                 </div>
-              </section>
+              </section> -->
               <section class="section-showcase-post">
                 <div class="page-padding">
                   <div class="container-large">
