--- a/work.html
+++ b/work.html
@@ -320,7 +320,7 @@
                             href="/experience/healthcare-systems.html"
                             ><div class="work-card-info">
                               <div class="text-size-regular text-weight-medium">
-                                Machine Learning Intern
+                                Healthcare Systems - Machine Learning Intern 
                               </div>
                               <div class="project-arrow project-arrow-small">
                                 <div class="arrow-icon-clip">
@@ -519,7 +519,7 @@
                             >
                           </div>
                         </div>
-                           <div class="project-item w-dyn-item" role="listitem">
+                        <div class="project-item w-dyn-item" role="listitem">
                           <a
                             al=""
                             class="work-card w-inline-block"
@@ -567,17 +567,17 @@
                             </div>
                             <div class="work-card-image">
                               <img
-                                alt=""
+                                alt="DeliverEase Logo"
                                 class="image-full"
                                 loading="lazy"
-                                sizes="(max-width: 479px) 86vw, (max-width: 767px) 51vw, (max-width: 991px) 50vw, (max-width: 1919px) 202.40000915527344px, 11vw"
-                                src="images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg"
-                                srcset="
-                                  images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-500.jpg   500w,
-                                  images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-800.jpg   800w,
-                                  images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-1080.jpg 1080w,
-                                  images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min-p-1600.jpg 1600w,
-                                  images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg        2544w
+                                src="images/Deliverease_logo.png"
+                                style="
+                                  width: 700px;
+                                  height: 700px;
+                                  object-fit: contain;
+                                  padding: 20px;
+                                  margin: auto;
+                                 
                                 "
                               />
                               <div class="overlay"></div></div
@@ -587,6 +587,69 @@
                               class="tag w-inline-block"
                               href="/category/projects.html"
                               ><div>Personal Projects</div></a
+                            >
+                          </div>
+                        </div>
+                        <div class="project-item w-dyn-item" role="listitem">
+                          <a
+                            al=""
+                            class="work-card w-inline-block"
+                            href="/experience/statbox.html"
+                            ><div class="work-card-info">
+                              <div class="text-size-regular text-weight-medium">
+                                Statbox - Frontend Developer
+                              </div>
+                              <div class="project-arrow project-arrow-small">
+                                <div class="arrow-icon-clip">
+                                  <div
+                                    class="arrow-icon large-arrow-icon w-embed"
+                                  >
+                                    <svg
+                                      fill="none"
+                                      height="420"
+                                      viewbox="0 0 24 24"
+                                      width="420"
+                                      xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                      <path
+                                        d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
+                                        fill="currentColor"
+                                      ></path>
+                                    </svg>
+                                  </div>
+                                  <div
+                                    class="arrow-icon large-arrow-icon w-embed"
+                                  >
+                                    <svg
+                                      fill="none"
+                                      height="420"
+                                      viewbox="0 0 24 24"
+                                      width="420"
+                                      xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                      <path
+                                        d="M13.1722 12L8.22217 7.04999L9.63617 5.63599L16.0002 12L9.63617 18.364L8.22217 16.95L13.1722 12Z"
+                                        fill="currentColor"
+                                      ></path>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="work-card-image">
+                              <img
+                                alt=""
+                                class="image-full"
+                                loading="lazy"
+                                src="images/Logo.png"
+                              />
+                              <div class="overlay"></div></div
+                          ></a>
+                          <div class="tag-wrapper tag-wrapper-small">
+                            <a
+                              class="tag w-inline-block"
+                              href="/category/work.html"
+                              ><div>Professional Experience</div></a
                             >
                           </div>
                         </div>
