--- a/index.html
+++ b/index.html
@@ -1709,7 +1709,7 @@
                                     <div
                                       class="text-size-large text-weight-medium"
                                     >
-                                      Machine Learning Intern
+                                    Healthcare Systems - Machine Learning Intern 
                                     </div>
                                   </div></a
                                 >
@@ -1790,19 +1790,19 @@
                               <div class="tag-wrapper">
                                 <a
                                   class="tag w-inline-block"
-                                  href="/category/projects.html"
-                                  ><div>Personal Projects</div></a
+                                  href="/category/work.html"
+                                  ><div>Professional Experience</div></a
                                 >
                               </div>
                               <a
                                 class="project-card w-inline-block"
-                                href="/experience/deliverease-project.html"
+                                href="/experience/statbox.html"
                                 ><div class="project-background">
                                   <img
                                     alt=""
                                     class="image-full"
                                     loading="lazy"
-                                    src="images/screencapture-pupstorm-9ba9083136ba-herokuapp-index-html-2024-10-16-23_20_51-min.jpg"
+                                    src="images/Logo_Statbox.jpg"
                                   />
                                   <div class="overlay"></div>
                                 </div>
@@ -1846,13 +1846,13 @@
                                   <div
                                     class="text-size-large text-weight-medium"
                                   >
-                                    Deliverease
+                                  Statbox - Frontend Developer
                                   </div>
                                 </div></a
                               >
+                            </div>
                               
-                            </div>
-                            </div>
+                              
                           </div>
                         </div>
                       </div>
